fixed nav bar misalign

--- a/src/Components/Style.css
+++ b/src/Components/Style.css
@@ -7,9 +7,7 @@
     font-display: swap;
 }
 
-.opener-container{
- 
-}
+
 
 .eighties {
   font-family: 'EightiesComeback', sans-serif;
@@ -147,8 +145,8 @@
 }
 
 .featured-body{
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
   padding-top: 80px;
   padding-bottom: 120px;
 }
@@ -234,6 +232,12 @@
 }
 
 @media (max-width: 768px) {
+  .featured-body{
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 80px;
+  padding-bottom: 120px;
+}
   
   .banner-text {
     font-size: 3.75rem;
